Refactor `ClassFactory` to `ClassDefiner` API